# thread-opt

./: .clippy.toml  .gitignore  Cargo.toml  NOTICES  README.md  build.rs  clear.sh  clippy.toml  count.sh  debug.sh  fix.sh  game_config.toml  get_all_code.sh  make.py  new_release.sh  pgo.sh  release.sh  test_build.sh  统计.sh
.cargo/: config.toml
.github/workflows/: ci.yml
maketools/: build.py  fix.py  format_codes.py  misc.py  toolchains.py  update.py
module/: changelog.md  customize.sh  module.prop  service.sh  stop.sh  thread_opt.toml  update.json  utils.sh
src/: lib.rs  main.rs
src/activity/: get_tid_info.rs  get_top_app.rs  get_top_pid.rs  get_top_tid.rs  mod.rs
src/affinity_policy/: mod.rs  pkg_cfg.rs  policy_common.rs  policy_mingchao.rs  policy_normal.rs  policy_pubg.rs  policy_uname.rs  policy_unity.rs  policy_unname.rs
src/affinity_set/: mod.rs  policy.rs  policy_pubg.rs  unity.rs
src/affinity_utils/: analysis.rs  group_info.rs  mod.rs
src/cgroup/: analysis.rs  group_info.rs  mod.rs
src/config/: format_profile.rs  mod.rs
src/cpu_common/: mod.rs  process_monitor.rs  usage_tracker.rs
src/fs_utils/: dir_ctrl.rs  mod.rs  node_writer.rs
src/looper/: mod.rs  pkg_cfg.rs
src/misc/: logger.rs  mod.rs
src/policy/: affinity_policy.rs  common.rs  mod.rs  pkg_cfg.rs  policy_unname.rs
src/policy/name_match/: cfg_start.rs  common.rs  mod.rs  policy_cocos.rs  policy_common.rs  policy_mingchao.rs  policy_ue.rs  policy_unity.rs  trie.rs
src/policy/name_match/policies/: mod.rs  policy_sky.rs  policy_ue.rs  policy_unity.rs
src/policy/usage/: mod.rs
src/policy/usage/usage_top1/: common.rs  macro_common.rs  mod.rs  policy_top1.rs  policy_ue_top1.rs  policy_unname1.rs  policy_usage1.rs
src/policy/usage/usage_top1/lolm/: common.rs  mod.rs  policy_second.rs
src/policy/usage/usage_top1/policies/: mod.rs  policy_cocos.rs  policy_second.rs  policy_ue5.rs
src/policy/usage/usage_top1/ue5/: mod.rs  policy_ue5.rs
src/policy/usage/usage_top1/unnamed/: common.rs  mod.rs  policy_top1.rs
src/policy/usage/usage_top2/: common.rs  mod.rs  policy_party.rs  policy_top2.rs  policy_unname2.rs  policy_usage2.rs
src/policy/usage_analysis/: common.rs  policy_unname.rs
src/policy/usage_top1/: cfg_start.rs  common.rs  macro_common.rs  mod.rs  policy_unname1.rs
src/policy/usage_top1/policies/: mod.rs  policy_cocos.rs  policy_codm.rs  policy_ru.rs  policy_second.rs  policy_top1.rs  policy_unity_t1.rs  policy_wzm.rs
src/policy/usage_top2/: cfg_start.rs  common.rs  mod.rs  policy_party.rs  policy_top2.rs  policy_ue_t2.rs  policy_unity_t2.rs  policy_unname.rs  policy_unname2.rs
src/scheduler/: looper.rs  mod.rs  name_match.rs  usage_top1.rs  usage_top2.rs
src/shared/: get_tid_info.rs  get_top_app.rs  logger.rs  mod.rs
src/utils/: affinity_setter.rs  dir_reader.rs  global_cpu_set.rs  global_cpu_utils.rs  guard.rs  mod.rs  node_reader.rs  sleep.rs
src/utils/affinity_utils/: cpu_set_initer.rs  global_cpu_set.rs  global_cpu_utils.rs  mod.rs
src/utils/priority_utils/: global_priority.rs  global_priority_utils.rs  mod.rs  priority_initer.rs
