[package]
name = "thread-opt"
version = "2.2.0"
edition = "2024"
description = "The Hard Affinity policy binds threads to target cores in gaming."
keywords = ["thread", "game", "android"]
authors = ["reigadegr"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/reigadegr/thread-opt"
categories = ["utils"]

[[bin]]
name = "thread-opt"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.99", default-features = false }
atoi = { version = "2.0.0", default-features = false }
compact_str = { version = "0.9.0", default-features = false, features = [
    "serde",
] }
dumpsys-rs = { git = "https://github.com/reigadegr/dumpsys-rs" }
hashbrown = { version = "0.15.5", default-features = false, features = [
    "default-hasher",
    "inline-more",
    "serde",
] }
heapless = { version = "0.8", features = ["serde"] }
inotify = { version = "0.11.0", default-features = false }
itoa = { version = "1.0.15", features = [] }
libc = { version = "0.2.175", default-features = false }
likely_stable = "0.1.3"
log = "0.4.27"
mimalloc = { version = "0.1.47", features = [
    "no_thp",
    "local_dynamic_tls",
    "override",
] }
minstant = "0.1.7"
once_cell = { version = "1.21.3", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
stringzilla = "3.12.6"
taplo = { version = "0.14.0", default-features = false }
tklog = "0.3.0"
toml = { version = "0.9.5", default-features = false, features = [
    "parse",
    "serde",
] }

[build-dependencies]
anyhow = "1.0.99"
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }

[profile.dev]
debug = 0
debug-assertions = true
panic = "abort"
incremental = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
incremental = false
