[package]
name = "thread-opt"
version = "2.3.0"
edition = "2024"
description = "The Hard Affinity policy binds threads to target cores in gaming."
keywords = ["thread", "game", "android"]
authors = ["reigadegr"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/reigadegr/thread-opt"
categories = ["utils"]

[[bin]]
name = "thread-opt"
path = "src/main.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
similar_names = "allow"
missing_errors_doc = "allow"
missing_safety_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"
option_if_let_else = "allow"
manual_unwrap_or_default = "allow"

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
arc-swap = "1.9.1"
atoi = { version = "2.0.0", default-features = false }
compact_str = { version = "0.9.0", default-features = false, features = [
    "serde",
] }
dumpsys-rs = { git = "https://github.com/reigadegr/dumpsys-rs" }
heapless = { version = "0.9", features = ["serde"] }
inotify = { version = "0.11.1", default-features = false }
itoa = { version = "1.0.18", features = [] }
libc = { version = "0.2.186", default-features = false }
likely_stable = "0.1.3"
log = "0.4.29"
memchr = "2.8.0"
mimalloc = { version = "0.1.51", features = ["v2", "no_thp", "override"] }
minstant = "0.1.7"
ndk-sys = "0.6.0"
once_cell = { version = "1.21.4", default-features = false }
rayon = "1.12.0"
rustix = { version = "1.1.4", features = ["fs", "process"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
stringzilla = "4.6.1"
taplo = { version = "0.14.0", default-features = false }
tklog = "0.3.0"
toml = { version = "1.1.2", default-features = false, features = [
    "parse",
    "serde",
] }

[build-dependencies]
anyhow = "1.0.102"
vergen = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"] }

[profile.dev]
debug = 0
debug-assertions = true
panic = "abort"
incremental = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
incremental = false
panic = "abort"
